# longleaf

./: Cargo.toml
.github/workflows/: rust.yml
benches/: parallel.rs  single.rs
compiler/: Cargo.toml
compiler/src/: chunk.rs  compile.rs  debug.rs  lib.rs  ops.rs
compiler/tests/: simple_test.rs
engine/: Cargo.toml
lang/: Cargo.toml  grammar.md
lang/src/: ast.rs
longleaf-lib/: Cargo.toml
longleaf-lib/benches/: parallel.rs  single.rs
longleaf-lib/src/internal_store/: mod.rs
longleaf-lib/src/parser/: grammar.pest  tests.rs
longleaf-lib/src/vm/: mod.rs  namespace.rs  tests.rs
longleaf-lib/src/vm/builtins/: builtins_macros.rs
longleaf-repl/: Cargo.toml
longleaf-repl/src/: main.rs
parser/: Cargo.toml
parser/src/: cst.rs  lib.rs  parse.rs  process.rs
parser/src/parse/: tests.rs
perf/: bench.leaf  bench.results  bench.results copy.parallel  bench.results.parallel  bench.results.serial  notes.md
repl/: Cargo.toml
repl/src/: main.rs
src/: lib.rs  macros.rs  main.rs  values.rs  vector_store.rs  zero.rs
src/internal_store/: mod.rs
src/parser/: grammar.pest  mod.rs  tests.rs
src/vm/: eval_macros.rs  macros.rs  mod.rs  namespace.rs  ptrs.rs  store.rs  tests.rs  values.rs
src/vm/builtins/: builtins_macros.rs  list_builtins.rs  mod.rs  range.rs
vm/: Cargo.toml
vm/src/: lib.rs
vm/tests/: helpers.rs  simple_test.rs  vm_statement_tests.rs
