[workspace]

members = [
    # lib; contains AST definitions used by multiple crates
    "lang",
    # lib; exposes a small number of functions to turn text into AST elements
    "parser",
    # lib; exposes an allocator for vector / matrix / tensor objects with basic functionality on them
    "engine",
    # lib; keeps track of variables and contains logic to execute code
    # try not to make this a huge monolith
    "vm",
    # bin; simple Read Eval Print Loop using the preceding crates
    "repl"
]