[package]
name = "longleaf-repl"
version = "0.1.0"
authors = ["Richard Rast <richard.rast@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
longleaf-lib = { path="../longleaf-lib" }

rayon = "1.3.0"

[features]
default = []

timing = [ "longleaf-lib/timing" ]
