[package]
name = "parser"
version = "0.1.0"
authors = ["Richard Rast <richard.rast@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lang = { path = "../lang" }

nom = { version = "6", features = [ "regexp" ] }
nom_locate = "3"