[package]
name = "vm"
version = "0.1.0"
authors = ["Richard Rast <richard.rast@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lang = { path = "../lang" }
# TODO: probably makes sense to move the OpCode + Chunk definitions to lang, so we don't have to depend on the compiler to run code
compiler = { path = "../compiler" }
